--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -5,5 +5,33 @@
 @tailwind utilities;
 
 .advocacia-button {
-    @apply flex gap-5 justify-center items-center font-poppins font-semibold italic text-sm px-5 py-2.5 rounded-lg
+    @apply flex gap-5 justify-center items-center font-poppins font-semibold italic text-sm px-5 py-2.5 rounded-lg relative overflow-hidden
+}
+
+.advocacia-button::after {
+    content: '';
+    position: absolute;
+    left: -70px;
+    top: -20px;
+    width: 50px;
+    height: 100px;
+    
+    transform: rotateZ(30deg);
+}
+
+.advocacia-button:hover::after {
+    animation: shine-reflex 1.3s ease-out 0s;
+}
+
+@keyframes shine-reflex {
+    0% {
+        opacity: .1;
+    }
+    50% {
+        opacity: .9;
+    }
+    100% {
+        opacity: .1;
+        left: 100%;
+    }
 }
