--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -5,7 +5,7 @@
 @tailwind utilities;
 
 .advocacia-button {
-    @apply flex gap-5 justify-center items-center font-poppins font-semibold italic text-sm px-5 py-2.5 rounded-lg relative overflow-hidden
+    @apply flex gap-5 justify-center items-center font-poppins font-semibold italic text-xs sm:text-sm px-5 py-2.5 rounded-lg relative overflow-hidden
 }
 
 .advocacia-button::after {
